; ModuleID = '/home/carl/AnghaBench/linux/drivers/char/extr_tlclk.c_store_enable_clka1_output.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/char/extr_tlclk.c_store_enable_clka1_output.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_attribute = type { i32 }

@.str = private unnamed_addr constant [4 x i8] c"%lX\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"tmp = 0x%lX\0A\00", align 1
@event_lock = common dso_local global i32 0, align 4
@TLCLK_REG2 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.device_attribute*, i8*, i64)* @store_enable_clka1_output to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @store_enable_clka1_output(%struct.device* %0, %struct.device_attribute* %1, i8* %2, i64 %3) #0 {
  %5 = alloca %struct.device*, align 8
  %6 = alloca %struct.device_attribute*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i8, align 1
  store %struct.device* %0, %struct.device** %5, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %6, align 8
  store i8* %2, i8** %7, align 8
  store i64 %3, i64* %8, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = call i32 @sscanf(i8* %12, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i64* %10)
  %14 = load %struct.device*, %struct.device** %5, align 8
  %15 = load i64, i64* %10, align 8
  %16 = call i32 @dev_dbg(%struct.device* %14, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0), i64 %15)
  %17 = load i64, i64* %10, align 8
  %18 = trunc i64 %17 to i8
  store i8 %18, i8* %11, align 1
  %19 = load i64, i64* %9, align 8
  %20 = call i32 @spin_lock_irqsave(i32* @event_lock, i64 %19)
  %21 = load i32, i32* @TLCLK_REG2, align 4
  %22 = load i8, i8* %11, align 1
  %23 = zext i8 %22 to i32
  %24 = shl i32 %23, 2
  %25 = trunc i32 %24 to i8
  %26 = call i32 @SET_PORT_BITS(i32 %21, i32 251, i8 zeroext %25)
  %27 = load i64, i64* %9, align 8
  %28 = call i32 @spin_unlock_irqrestore(i32* @event_lock, i64 %27)
  %29 = load i8*, i8** %7, align 8
  %30 = load i64, i64* %8, align 8
  %31 = call i32 @strnlen(i8* %29, i64 %30)
  ret i32 %31
}

declare dso_local i32 @sscanf(i8*, i8*, i64*) #1

declare dso_local i32 @dev_dbg(%struct.device*, i8*, i64) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @SET_PORT_BITS(i32, i32, i8 zeroext) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1

declare dso_local i32 @strnlen(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
